# Spike

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CosineSignal_8h.html  CosineSignal_8h.js  CosineSignal_8h_source.html  Doxyfile  FiringRateSimulation_8h.html  FiringRateSimulation_8h.js  FiringRateSimulation_8h_source.html  IFAC_8h.html  IFAC_8h.js  IFAC_8h_source.html  IF_8h.html  IF_8h.js  IF_8h_source.html  IO_8h.html  IO_8h.js  IO_8h_source.html  Integrations_8h.html  Integrations_8h.js  Integrations_8h_source.html  NeuronFactory_8h.html  NeuronFactory_8h.js  NeuronFactory_8h_source.html  Neuron_8h.html  Neuron_8h.js  Neuron_8h_source.html  README.md  SignalFactory_8h_source.html  Signal_8h.html  Signal_8h.js  Signal_8h_source.html  SpikeTrain_8h_source.html  Spike_8h_source.html  StepSignal_8h_source.html  SusceptibilitySimulationLinNonlin_8h.html  SusceptibilitySimulationLinNonlin_8h.js  SusceptibilitySimulationLinNonlin_8h_source.html  SusceptibilitySimulationLin_8h.html  (+122 more)
Spike/: CMakeLists.txt  Spike.h
Spike/FFT/: fft.cpp  fft.h
Spike/IO/: IO.cpp  IO.h
Spike/Integration/: Integrations.cpp
Spike/Neuron/: IF.cpp  IF.h  IFAC.cpp  IFAC.h  Neuron.h  NeuronFactory.cpp  NeuronFactory.h
Spike/Signal/: CosineSignal.cpp  CosineSignal.h  Signal.cpp  Signal.h  SignalFactory.cpp  SignalFactory.h  StepSignal.cpp  StepSignal.h  TwoCosineSignal.cpp  TwoCosineSignal.h  WhiteNoiseSignal.cpp  WhiteNoiseSignal.h
Spike/Simulation/: FiringRateSimulation.cpp  FiringRateSimulation.h  SusceptibilitySimulation.cpp  SusceptibilitySimulation.h  SusceptibilitySimulationLin.cpp  SusceptibilitySimulationLin.h  SusceptibilitySimulationLinNonlin.cpp  SusceptibilitySimulationLinNonlin.h  SusceptibilitySimulationNonlin.cpp  SusceptibilitySimulationNonlin.h
Spike/SpikeTrain/: SpikeTrain.cpp  SpikeTrain.h
Spike/Statistics/: statistics.cpp  statistics.h
Spike/TimeFrame/: TimeFrame.cpp  TimeFrame.h
app/: CMakeLists.txt  spike_firing_rate.cpp  spike_r0_mu.cpp  spike_raster_plot.cpp  spike_suscept.cpp  spike_suscept_lin_novikov.cpp  spike_suscept_nonlin.cpp  spike_test.cpp  spike_trajectory.cpp
app/CV/: CMakeLists.txt  cv.cpp
app/CVandMeanRate/: CMakeLists.txt  cvrate.cpp
app/CycloHisto/: CMakeLists.txt  cyclo.cpp  cyclohisto.cpp
app/FiringRate/: firing_rate.cpp
app/MeanRate/: CMakeLists.txt  mean.cpp
app/NoiseScan/: CMakeLists.txt  noise.cpp
app/RateOnePeriod/: CMakeLists.txt  rateoneperiod.cpp
app/Spike/: CMakeLists.txt  spike.cpp
app/Stumpf/: CMakeLists.txt  stumpf.cpp
app/Suscept/: CMakeLists.txt  susc.cpp
app/SusceptibilityScan/: CMakeLists.txt  suscept_scan.cpp
app/SusceptibilityScanNew/: CMakeLists.txt  suscept_scan.cpp
app/Testing/: CMakeLists.txt  test.cpp
app/Testing in C/: test.c
app/Voltage Curve/: CMakeLists.txt  curve.cpp
app/WienerKernel/: CMakeLists.txt  wiener.cpp
app/firing_rate/: CMakeLists.txt  firing_rate.cpp
app/firing_rate_mpi/: CMakeLists.txt  firing_rate_mpi.cpp
app/suscept/: CMakeLists.txt  suscept.cpp
app/suscept_mpi/: CMakeLists.txt  suscept_mpi.cpp
app/test/: CMakeLists.txt  test.cpp
src/: CMakeLists.txt  factorial.cpp  factorial.h  models.cpp  models.h  spike.cpp  spike_old
src/Adaptation/: Adaptation.cpp  Adaptation.h  ExpAdaptation.cpp  ExpAdaptation.h
src/FFT/: fft.cpp  fft.h
src/FiringRate/: FiringRate.cpp  FiringRate.h  FiringRateBox.cpp  FiringRateBox.h  FiringRateExp.cpp  FiringRateExp.h  FiringRateFactory.cpp  FiringRateFactory.h
src/IF/: IF.cpp  IF.h  LIF.cpp  LIF.h  PIF.cpp  PIF.h
src/IFAC/: IFAC.cpp  IFAC.h  LIFAC.cpp  LIFAC.h  PIFAC.cpp  PIFAC.h
src/IO/: CMakeLists.txt  input_output.cpp  input_output.h
src/InputOutput/: CMakeLists.txt  filetools.cpp  filetools.h  inputoutput.cpp  inputoutput.h  options.cpp  options.h
src/Integration/: Integrations.h
src/Models/: CMakeLists.txt  Neuron.h  NeuronFactory.cpp  Simulation.cpp  models.cpp  models.h  neuron.cpp  neuron.h
src/Models/IF/: IF.cpp  IF.h  LIF.cpp  LIF.h  LIFsig.cpp  LIFsig.h  PIF.cpp  PIF.h
src/Models/IFadapt/: IFadapt.cpp  IFadapt.h  LIFadapt.cpp  LIFadapt.h  PIFadapt.cpp  PIFadapt.h
src/Models/Neuron/: Neuron.cpp  Neuron.h  NeuronFactory.cpp  NeuronFactory.h
src/Models/Signal/: Signal.h  SignalFactory.h
src/Neuron/: CMakeLists.txt  IF.cpp  IF.h  IFAC.cpp  IFAC.h  Neuron.cpp  Neuron.h  NeuronFactory.cpp  NeuronFactory.h  neuron.cpp  neuron.h
src/Neuron/IF/: IF.cpp  IF.h  (+4 more)
src/Options/: Options.cpp  Options.h  filetools.cpp  filetools.h  options.cpp  options.h
src/Signal/: Cosine.cpp  Cosine.h  CosineSignal.cpp  CosineSignal.h  Signal.cpp  Signal.h  SignalFactory.cpp  SignalFactory.h  StepSignal.cpp  StepSignal.h  TwoCosine.cpp  TwoCosine.h  TwoCosineSignal.cpp  TwoCosineSignal.h  WhiteNoiseSignal.cpp  WhiteNoiseSignal.h
src/Simulation/: CMakeLists.txt  FiringRateSimulation.cpp  FiringRateSimulation.h  Simulation.cpp  Simulation.h  Timeframe.cpp  Timeframe.h
src/Simulations/: SusceptibilitySimulation.cpp  SusceptibilitySimulation.h
src/Spike/: ensemble_statistics.cpp  ensemble_statistics.h  simulate.cpp  simulate.h
src/SpikeTrain/: SpikeTrain.cpp  SpikeTrain.h
src/SpikeTrains/: SpikeTrains.cpp  SpikeTrains.h
src/Statistics/: CMakeLists.txt  Statistics.cpp  isi.cpp  isi.h  rate.cpp  rate.h  statistics.cpp  statistics.h
src/Susceptibility/: Susceptibility.cpp  Susceptibility.h
src/TimeFrame/: TimeFrame.cpp  TimeFrame.h
src/Timeframe/: Timeframe.cpp  Timeframe.h
test/: CMakeLists.txt  test_main.cpp  tests-models.cpp  tests.cpp  tests_neuron.cpp
test/Adaptation/: test_ExpAdaptation.cpp
test/IF/: test_LIF.cpp  test_PIF.cpp
test/IO/: tests_input_output.cpp
test/InputOutput/: test_filetools.cpp  test_options.cpp
test/Models/: test_simulation.cpp  tests_neuron.cpp
test/Neuron/: test_simulation.cpp  tests_neuron.cpp
test/Options/: test_Options.cpp
test/Signal/: test_CosineSignal.cpp  test_StepSignal.cpp  test_TwoCosineSignal.cpp  test_WhiteNoiseSignal.cpp
test/SpikeTrain/: test_SpikeTrain.cpp
test/Statistics/: test_isi.cpp  test_rate.cpp  tests_statistics.cpp
test/TimeFrame/: test_TimeFrame.cpp
(+737 files in other folders)
